css/experimental.css
@import url("./faces.css");

@font-face {
  font-family: DEP;
  src:
    url("/fonts/DEP/DEP.ttf") format("truetype"),
    url("/fonts/DEP/DEP.woff") format("woff"),
    url("/fonts/DEP/DEP.woff2") format("woff2"),
    url("/fonts/DEP/DEP.otf") format("opentype"),
    url("https://spax.zone/fonts/DEP/DEP.ttf") format("truetype"),
    url("https://spax.zone/fonts/DEP/DEP.woff") format("woff"),
    url("https://spax.zone/fonts/DEP/DEP.woff2") format("woff2"),
    url("https://spax.zone/fonts/DEP/DEP.otf") format("opentype");
}

* {
  box-sizing: border-box;
}

html,
body {
  inset: 0;
  width: 100vw;
  height: 100vh;
  padding: 0;
  margin: 0;
  overflow: hidden auto;
  image-rendering: pixelated;
  font-smooth: never;
  -webkit-font-smoothing: none;
}

:root {
  --c1: #e0f8cf;
  --c2: #86c06c;
  --c3: #306850;
  --c4: #071821;
  --red: #ff0000;
}

body {
  font-family: DEP;
  font-size: 21px;
  display: flex;
  justify-content: flex-start;
  flex-flow: column;
  align-items: center;
  gap: 5px;
  perspective: 550px;
  background: repeat #306850 url("/images/bg/background_yoki.png");
  background-size: 960px;
  image-rendering: pixelated;
  height: fit-content;
  min-height: 100vh;
}

@supports (scrollbar-color: auto) {
  body {
    scrollbar-color: #86c06c #e0f8cf;
  }
}

@supports selector(::-webkit-scrollbar) {
  body::-webkit-scrollbar {
    background: #86c06c;
  }
  body::-webkit-scrollbar-thumb {
    background: #e0f8cf;
  }
}

body article:first-of-type {
  margin-top: 5px;
}

body article:last-of-type {
  margin-bottom: 5px;
}

article {
  position: relative;
  border: 3px solid var(--c1);
  letter-spacing: 3px;
  line-height: 21px;
  background: black;
  padding: 15px;
  color: var(--c1);
  height: fit-content;
  overflow: hidden;
  width: 100%;
  flex-shrink: 0;
  max-width: 600px;
  min-height: 133px;
  user-select: none;
  word-wrap: break-word;
  &[who] {
    padding-left: 127px;
  }
}

article::after {
  content: "";
  display: block;
  position: absolute;
  left: 50%;
  bottom: 0;
  aspect-ratio: 5/4;
  z-index: 1;
  height: 8px;
  background: url("/images/misc/next_arrow/next_arrow.png") center/100%;
  animation: alternate arrow 0.75s steps(2, jump-none) infinite;
}

@keyframes arrow {
  0% {
    bottom: 4px;
  }
  50% {
    bottom: 2px;
  }
  100% {
    bottom: 0;
  }
}

.red {
  color: var(--red);
}

a {
  &:link, &:visited {
    color: var(--c2);
  }
  
  &:hover {
    color: var(--c1);
  }
  
  &:active {
    color: var(--c3);
  }
}

@media only screen and (max-width: 600px) {
  article {
    width: 100% !important;
    &[type=art] {
      min-width: revert !important;
    }
  }
}

article[type=art] {
  text-align: center;
  & > img {
    width: 100%;
    min-width: auto;
    padding: 0;
    image-rendering: auto;
  }
}

article[type=description] {
  font-size: 16px;
  letter-spacing: 1px;
  text-decoration: underline;
  min-height: 0;
}

article[type=title] {
  font-size: 25px;
  letter-spacing: 1px;
  min-height: 0;
}

article[type=short] {
  min-height: 0;
}

